# massscriber

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  app.py  build_desktop.bat  build_desktop.py  install.bat  pyproject.toml  start_ui.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  desktop.yml  pypi-publish.yml  release.yml
massscriber/: __init__.py  cloud.py  diagnostics.py  diarization.py  exporters.py  library.py  postprocess.py  profiles.py  providers.py  transcriber.py  types.py  ui.py  watcher.py
massscriber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
smoke_outputs/: sample_test_220dd914.json  sample_test_220dd914.txt
tests/: test_cloud.py  test_diagnostics.py  test_diarization.py  test_exporters.py  test_library.py  test_postprocess.py  test_profiles.py  test_providers.py  test_transcriber_progress.py  test_ui_inputs.py  test_watcher.py
